The newest information on a favorite diary is displayed
git-svn-id: https://svn.openpne.jp/svn/OpenPNE3/plugins/opFavoritePlugin/trunk@10118 8bbc783d-d51a-0410-adab-8fa69d43f207

--- a/config/widget.yml
+++ b/config/widget.yml
@@ -11,3 +11,5 @@ favoriteListBox:
       ValueType:   "int"
       IsRequired:  true
       Default:     3
+favoriteNews:
+  component: [favorite, favoriteNews]
