--- a/data/fixtures/010_navigation.yml
+++ b/data/fixtures/010_navigation.yml
@@ -7,6 +7,10 @@ Navi:
     type: "friend"
     uri: "favorite/add"
     sort_order: 21;
+  mobile_home_side_navi_favorite_list:
+    type: "mobile_home_side"
+    uri: "favorite/list"
+    sort_order: 25;
 
 NaviI18n:
   favorite_navi_list_i18n:
@@ -16,5 +20,9 @@ NaviI18n:
   favorite_navi_add_i18n:
     id: favorite_navi_add
     caption: "お気に入りに追加"
+    culture: "ja_JP"
+  mobile_home_side_navi_favorite_list_i18n:
+    id: mobile_home_side_navi_favorite_list
+    caption: "お気に入り"
     culture: "ja_JP"
 
