--- a/data/fixtures/010_navigation.yml
+++ b/data/fixtures/010_navigation.yml
@@ -1,28 +1,28 @@
-Navi:
-  favorite_navi_list:
+Navigation:
+  favorite_navigation_list:
     type: "default"
     uri: "favorite/list"
     sort_order: 19;
-  favorite_navi_add:
+  favorite_navigation_add:
     type: "friend"
     uri: "favorite/add"
     sort_order: 21;
-  mobile_home_side_navi_favorite_list:
+  mobile_home_side_navigation_favorite_list:
     type: "mobile_home_side"
     uri: "favorite/list"
     sort_order: 25;
 
-NaviI18n:
-  favorite_navi_list_i18n:
-    id: favorite_navi_list
+NavigationI18n:
+  favorite_navigation_list_i18n:
+    id: favorite_navigation_list
     caption: "お気に入り"
     culture: "ja_JP"
-  favorite_navi_add_i18n:
-    id: favorite_navi_add
+  favorite_navigation_add_i18n:
+    id: favorite_navigation_add
     caption: "お気に入りに追加"
     culture: "ja_JP"
-  mobile_home_side_navi_favorite_list_i18n:
-    id: mobile_home_side_navi_favorite_list
+  mobile_home_side_navigation_favorite_list_i18n:
+    id: mobile_home_side_navigation_favorite_list
     caption: "お気に入り"
     culture: "ja_JP"
 
