#3587:added the alert page by already redistered favarotie and added english navi link
git-svn-id: https://svn.openpne.jp/svn/OpenPNE3/plugins/opFavoritePlugin/trunk@10638 8bbc783d-d51a-0410-adab-8fa69d43f207

--- a/data/fixtures/010_navigation.yml
+++ b/data/fixtures/010_navigation.yml
@@ -26,3 +26,16 @@ NavigationI18n:
     caption: "お気に入り"
     culture: "ja_JP"
 
+  favorite_navigation_list_i18n_en:
+    id: favorite_navigation_list
+    caption: "Favorite"
+    culture: "en_US"
+  favorite_navigation_add_i18n_en:
+    id: favorite_navigation_add
+    caption: "Add to favorite"
+    culture: "en_US"
+  mobile_home_side_navigation_favorite_list_i18n_en:
+    id: mobile_home_side_navigation_favorite_list
+    caption: "Favorite"
+    culture: "en_US"
+
