--- a/config/gadget.yml
+++ b/config/gadget.yml
@@ -22,9 +22,44 @@ favoriteListBox:
       Default:     3
       Choices:    {1: 1, 2: 2, 3: 3, 4: 4, 5: 5, 6: 6}
 
-favoriteNews:
+favoriteDiaryNews:
   caption:
-    ja_JP: "お気に入り情報"
+    ja_JP: "お気に入り最新日記"
   description:
-    ja_JP: "お気に入りの情報を表示します"
-  component: [favorite, favoriteNews]
+    ja_JP: "お気に入りの最新日記を表示します"
+  component: [favorite, favoriteDiaryNews]
+  config:
+    max:
+      Name:      "max"
+      Caption:   "最大表示件数"
+      FormType:  "select"
+      ValueType:  "int"
+      IsRequired: true
+      Default:    5
+      Choices:
+        1: 1
+        3: 3
+        5: 5
+        7: 7
+        10: 10
+
+favoriteBlogNews:
+  caption:
+    ja_JP: "お気に入り最新Blog"
+  description:
+    ja_JP: "お気に入りの最新ブログを表示します"
+  component: [favorite, favoriteBlogNews]
+  config:
+    max:
+      Name:      "max"
+      Caption:   "最大表示件数"
+      FormType:  "select"
+      ValueType:  "int"
+      IsRequired: true
+      Default:    5
+      Choices:
+        1: 1
+        3: 3
+        5: 5
+        7: 7
+        10: 10
