携帯版に日記ガジェットを追加 (refs #1130)

--- a/data/fixtures/020_gadget.yml
+++ b/data/fixtures/020_gadget.yml
@@ -3,11 +3,18 @@ Gadget:
     type: "sideMenu"
     name: "favoriteListBox"
     sort_order: 40
+
   favorite_diary_news:
     type: "contents"
     name: "favoriteDiaryNews"
     sort_order: 103
+
   favorite_blog_news:
     type: "contents"
     name: "favoriteBlogNews"
     sort_order: 104
+
+  mobile_favorite_diary_news:
+    type: "mobileContents"
+    name: "favoriteDiaryNews"
+    sort_order: 105
