--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
+<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
     http://pear.php.net/dtd/tasks-1.0.xsd
     http://pear.php.net/dtd/package-2.0
     http://pear.php.net/dtd/package-2.0.xsd">
@@ -13,43 +13,45 @@
   <email />
   <active>yes</active>
  </lead>
- <date>2010-06-25</date>
- <time>23:05:52</time>
+ <date>2010-08-11</date>
+ <time>13:27:22</time>
  <version>
-  <release>1.0.0.2</release>
-  <api>1.0.0.2</api>
+  <release>1.0.0.3</release>
+  <api>1.0.0.3</api>
  </version>
  <stability>
   <release>beta</release>
   <api>beta</api>
  </stability>
  <license>apache</license>
- <notes>added the onDelete for relation of the favorite table.</notes>
+ <notes>
+fixed security issue of CSRF.
+ </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
    <file baseinstalldir="/" md5sum="3c4f43690774ad7861511e69478c7559" name="apps/mobile_frontend/config/routing.yml" role="data" />
    <file baseinstalldir="/" md5sum="52535e4b2e16dc7a29cecfb32706e13c" name="apps/mobile_frontend/i18n/messages.ja.xml" role="data" />
-   <file baseinstalldir="/" md5sum="32ebda169fea71391474310594198a29" name="apps/mobile_frontend/modules/favorite/actions/actions.class.php" role="data" />
+   <file baseinstalldir="/" md5sum="0d4bff5d5a37167c115b6514b8b5d515" name="apps/mobile_frontend/modules/favorite/actions/actions.class.php" role="data" />
    <file baseinstalldir="/" md5sum="fb5117bd84ccab5f195f3ff458b5f65c" name="apps/mobile_frontend/modules/favorite/actions/components.class.php" role="data" />
    <file baseinstalldir="/" md5sum="ecd9340ec0cf87dfa757b521072bc9e5" name="apps/mobile_frontend/modules/favorite/templates/diaryError.php" role="data" />
    <file baseinstalldir="/" md5sum="0861c87e0f8455ccaf2f8cff5eadfae7" name="apps/mobile_frontend/modules/favorite/templates/diarySuccess.php" role="data" />
    <file baseinstalldir="/" md5sum="303ef3fffadc57ed83a69a115f655023" name="apps/mobile_frontend/modules/favorite/templates/listError.php" role="data" />
-   <file baseinstalldir="/" md5sum="16ec550a3f37be8a7bb9a94991759532" name="apps/mobile_frontend/modules/favorite/templates/listSuccess.php" role="data" />
-   <file baseinstalldir="/" md5sum="760403063e3e01552d5b5f649ad849ab" name="apps/mobile_frontend/modules/favorite/templates/_addFavoriteLink.php" role="data" />
+   <file baseinstalldir="/" md5sum="d540c996fe5f8aff4ae58b222feb6cab" name="apps/mobile_frontend/modules/favorite/templates/listSuccess.php" role="data" />
+   <file baseinstalldir="/" md5sum="dddb10625489bef81561fe2f4bd2ad08" name="apps/mobile_frontend/modules/favorite/templates/_addFavoriteLink.php" role="data" />
    <file baseinstalldir="/" md5sum="339a25082215f93702d3271b3918ca4a" name="apps/mobile_frontend/modules/favorite/templates/_favoriteDiaryNews.php" role="data" />
    <file baseinstalldir="/" md5sum="086d3f8f8de79dcf1420b503d7d9bf8b" name="apps/mobile_frontend/modules/member/config/view.yml" role="data" />
    <file baseinstalldir="/" md5sum="4af3ef1b255474150f1edd04f53d0b71" name="apps/pc_frontend/config/routing.yml" role="data" />
-   <file baseinstalldir="/" md5sum="c1c1bf8676490b8b2b57f14d22a1c1c7" name="apps/pc_frontend/modules/favorite/actions/actions.class.php" role="data" />
+   <file baseinstalldir="/" md5sum="d1e47f198f87618c05b08d82e0a420ae" name="apps/pc_frontend/modules/favorite/actions/actions.class.php" role="data" />
    <file baseinstalldir="/" md5sum="4e2e8979e839bea3991d7fa5e578ec61" name="apps/pc_frontend/modules/favorite/actions/components.class.php" role="data" />
    <file baseinstalldir="/" md5sum="9cbbf2a71ebac31c5e9df7c44c2e0dec" name="apps/pc_frontend/modules/favorite/config/security.yml" role="data" />
    <file baseinstalldir="/" md5sum="039ea1fccb560f806527952fb077fbc5" name="apps/pc_frontend/modules/favorite/templates/addAlert.php" role="data" />
-   <file baseinstalldir="/" md5sum="b2919df9145cf185d18346a91d15d17e" name="apps/pc_frontend/modules/favorite/templates/addSuccess.php" role="data" />
+   <file baseinstalldir="/" md5sum="efdac0e178d4b3ec29edf78366f65a68" name="apps/pc_frontend/modules/favorite/templates/addSuccess.php" role="data" />
    <file baseinstalldir="/" md5sum="0379e98c2af99af16581eb819ea564b5" name="apps/pc_frontend/modules/favorite/templates/blogAlert.php" role="data" />
    <file baseinstalldir="/" md5sum="e61dfcdba3a8203218d99d747df2f480" name="apps/pc_frontend/modules/favorite/templates/blogSuccess.php" role="data" />
    <file baseinstalldir="/" md5sum="517502488d12f37dab1d6116cb857423" name="apps/pc_frontend/modules/favorite/templates/diaryAlert.php" role="data" />
    <file baseinstalldir="/" md5sum="a6104290b08645d235c810ca0a3dc754" name="apps/pc_frontend/modules/favorite/templates/diarySuccess.php" role="data" />
    <file baseinstalldir="/" md5sum="59696aebdc7945c9b13185d90c8d9ded" name="apps/pc_frontend/modules/favorite/templates/listError.php" role="data" />
-   <file baseinstalldir="/" md5sum="1cd47b0ecded237ce852e65333d7207f" name="apps/pc_frontend/modules/favorite/templates/listSuccess.php" role="data" />
+   <file baseinstalldir="/" md5sum="27a3e28c05e39b23a94e98a86e072fd8" name="apps/pc_frontend/modules/favorite/templates/listSuccess.php" role="data" />
    <file baseinstalldir="/" md5sum="71e800a7116fb3f91b8cda8779ac164e" name="apps/pc_frontend/modules/favorite/templates/_favoriteBlogNews.php" role="data" />
    <file baseinstalldir="/" md5sum="c3a881f9060859775c5cb29801bb647c" name="apps/pc_frontend/modules/favorite/templates/_favoriteDiaryNews.php" role="data" />
    <file baseinstalldir="/" md5sum="fcbf6e87774115149548412da1af0907" name="apps/pc_frontend/modules/favorite/templates/_favoriteListBox.php" role="data" />
@@ -65,7 +67,7 @@
    <file baseinstalldir="/" md5sum="00450e9ee4f5c9cb600ce13e29fc8552" name="data/migrations/1.0.0/003_insert_mobile_gadget.php" role="data" />
    <file baseinstalldir="/" md5sum="f39918212121ef18371be8d2d22dbc76" name="data/migrations/1.0.0.2/004_add_foreign_key_for_favorite.php" role="data" />
    <file baseinstalldir="/" md5sum="8f0d1190de51deb393520c8766445d55" name="i18n/messages.ja.xml" role="data" />
-   <file baseinstalldir="/" md5sum="4403655514dd10dd6d0786d819da7b72" name="lib/action/opFavoritePluginFavoriteActions.class.php" role="data" />
+   <file baseinstalldir="/" md5sum="7c01476342fb3ec2f94964fd2ec11fb1" name="lib/action/opFavoritePluginFavoriteActions.class.php" role="data" />
    <file baseinstalldir="/" md5sum="853ab8f4937bf59337dada6d950b8456" name="lib/action/opFavoritePluginFavoriteComponents.class.php" role="data" />
    <file baseinstalldir="/" md5sum="ec08c93196652cdf1acb7e45c78a8cf7" name="lib/filter/doctrine/PluginFavoriteFormFilter.class.php" role="data" />
    <file baseinstalldir="/" md5sum="5873a033e00411563592db32a6057b96" name="lib/form/doctrine/PluginFavoriteForm.class.php" role="data" />
@@ -84,11 +86,6 @@
    <pearinstaller>
     <min>1.4.0</min>
    </pearinstaller>
-   <package>
-    <name>symfony</name>
-    <channel>pear.symfony-project.com</channel>
-    <min>1.2.0</min>
-   </package>
   </required>
  </dependencies>
  <phprelease />
@@ -104,7 +101,9 @@
    </stability>
    <date>2009-05-29</date>
    <license>apache</license>
-   <notes>This plugin is now compatible with Doctrine</notes>
+   <notes>
+This plugin is now compatible with Doctrine
+   </notes>
   </release>
   <release>
    <version>
@@ -117,7 +116,9 @@
    </stability>
    <date>2010-06-03</date>
    <license>apache</license>
-   <notes>added index, routing roule, mobile gadget, fixed bug.</notes>
+   <notes>
+added index, routing roule, mobile gadget, fixed bug.
+   </notes>
   </release>
   <release>
    <version>
@@ -130,7 +131,9 @@
    </stability>
    <date>2010-06-07</date>
    <license>apache</license>
-   <notes>fixed the diary display was not taking the public range into consideration.</notes>
+   <notes>
+fixed the diary display was not taking the public range into consideration.
+   </notes>
   </release>
   <release>
    <version>
@@ -143,7 +146,24 @@
    </stability>
    <date>2010-06-25</date>
    <license>apache</license>
-   <notes>added the onDelete for relation of the favorite table.</notes>
+   <notes>
+added the onDelete for relation of the favorite table.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.0.0.3</release>
+    <api>1.0.0.3</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2010-08-11</date>
+   <license>apache</license>
+   <notes>
+fixed security issue of CSRF.
+   </notes>
   </release>
  </changelog>
 </package>
