--- a/test/fixtures/002_import_favorite.yml
+++ b/test/fixtures/002_import_favorite.yml
@@ -2,3 +2,6 @@ Favorite:
   first_member_favorite:
     Member: third_member
     Member_2: first_member
+  third_member_favorite:
+    Member: first_member
+    Member_2: third_member
